Fix z-index of header

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -43,6 +43,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1;
 
     display: flex;
     justify-content: space-around;
